<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kMatrona</string>
    <string name="hola">Hola</string>
    <string name="hello_world">Hello world, iBaby!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_naegele">Cálculo Naegele:</string>
    <string name="pest1">Esta en la pestaña 1</string>
    <string name="pest2">Esta en la pestaña 2</string>
    <string name="pest3">Esta en la pestaña 3</string>
    <string name="pest4">Esta en la pestaña 4</string>
    <string name="menu_insert">Agregar tarea</string>
    <string name="menu_delete">Borrar</string>
    <string name="todo_summary">Nombre</string>
    <string name="todo_description">Borrar</string>
    <string name="todo_edit_summary">Nombre</string>
    <string name="todo_edit_description">Descripción</string>
    <string name="todo_edit_confirm">Aceptar</string>
    <string name="no_todos">Aun no existen elementos en la lista.</string>
    <string name="usuario">Usuario:</string>
    <string name="email">Email:</string>
    <string name="pass">Contraseña:</string>
    <string name="login">login</string>
    <string name="other">Otro Dato:</string>
    <string name="espere">Espere</string>
    <string name="conectando">Conectando</string>
    <string name="login_ko">No se ha podido conectar</string>
    <string name="login_ok">Conectado correctamente</string>
    <string name="series">Mis Series</string>
    <string name="peliculas">Mis Películas</string>
    <string name="buscar">Buscar Series</string>
    <string name="buscar_pelis">Buscar Películas</string>
    <string name="logout">Desconectar</string>
    <string name="avanzado">Avanzado</string>
    <string name="editar_valor">Editar el valor:</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="restore">Restaurar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="registro">Registro</string>
    <string name="registro_usuario">Registro Usuario:</string>
    <string name="social">Compartir</string>
    <string name="title_activity_inicio_screen_splash">InicioScreenSplash</string>
    <string name="fur">Fecha Última Regla: </string>
    <string name="fpp">Fecha Probable Parto: </string>
    <string name="sdg">Semanas de Gestación: </string>
    <string name="sinDatosIntro">Sin datos introducidos.</string>
    <string name="fecha">Fecha</string>
    <string name="calcular">Calcular</string>
    <string name="progreso">Progreso embarazo:</string>
    <string name="programAdicional">Programa Recomendado:</string>
    <string name="tit_share">Compartir</string>
</resources>