<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_azul"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/scrollView1Login"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/linearLayout1Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/linearLayoutUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                        android:background="@drawable/background_blanco_borde_gris"
                android:layout_marginTop="15dip" >
	            <TextView
    	            android:id="@+id/textViewUsuario"
        	        android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
                	android:layout_gravity="center_vertical|bottom"
                	android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                	android:textColor="@color/amarillo"
					android:text="Usuario"
					android:textSize="20dip"                
                	/>
	        </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout5Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip" >
                <TextView
                    android:id="@+id/textView3Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="@string/title_activity_naegele"
                    android:textColor="@color/blanco"
                    android:textSize="35dip" >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/background_blanco_borde_gris"
                android:orientation="vertical" >
                <LinearLayout
                    android:id="@+id/linearLayout3Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/idTexto2"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/fur"
                        android:background="@drawable/background_edittext"
                        android:textColor="@color/font" >
                    </TextView>
                    <TextView
                        android:id="@+id/idTextoFecha"
                        android:text="@string/sinDatosIntro"
                        android:layout_width="125sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        >
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout4Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip" >
                    <TextView
                        android:id="@+id/idTexto3"
                        android:layout_width="125sp"
                        android:layout_height="wrap_content"
                        android:text="@string/fpp"
                        android:background="@drawable/background_edittext"
                        android:textColor="@color/font" >
                    </TextView>
                    <TextView
                        android:id="@+id/idTextoFechaProb"
                        android:text="@string/sinDatosIntro"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        >
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout6Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="5dip" >
                    <TextView 
                        android:id="@+id/idTexto4"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/sdg"
                        android:background="@drawable/background_edittext"
                        android:textColor="@color/font"
                        />
                    <TextView
                        android:id="@+id/idSemGesta"
                        android:text="@string/sinDatosIntro"
                        android:layout_width="125sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        />
               </LinearLayout>
               <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"               		
                    android:orientation="horizontal">
               		<Button
                    	android:id="@+id/bFecha"
                    	style="@style/styleBotonAzul"
                    	android:layout_width="125sp"
                    	android:layout_height="wrap_content"
                    	android:text="@string/fecha" >
                	</Button>               		
                	<Button
                    	android:id="@+id/idCalcular"
                    	style="@style/styleBotonAzul"
                    	android:layout_width="125sp"
                    	android:layout_height="wrap_content"
                        android:layout_weight="1"
                    	android:text="@string/calcular">
                 	</Button>
                 </LinearLayout>
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dip"
                     >                     
                    <TextView 
                        android:id="@+id/idTextProgreso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/progreso"
                        android:background="@drawable/background_edittext"
                        android:textColor="@color/font"
                        />
                 </LinearLayout>
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                	<ProgressBar
                	    android:id="@+id/progresoParto"
                	    style="?android:attr/progressBarStyleHorizontal"
                  	    android:layout_width="match_parent"
                	    android:layout_height="wrap_content" 
                	    android:max="280"
                	    android:progress="0"
                	    />
                 </LinearLayout>
                 <LinearLayout 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="5dip"
                     >
                     <TextView
                         android:id="@+id/idTextAdicional"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/programAdicional"
                         android:background="@drawable/background_edittext"
                         android:textColor="@color/font" 
                         />
    			 </LinearLayout>                     
                 <LinearLayout
                 	android:layout_width="fill_parent"
    				android:layout_height="fill_parent"
    				android:orientation="vertical"    				
                    android:background="@drawable/background_edittext"
                    >
				    <ListView 
        				android:id="@+id/listSemGest"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				/>
                 </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>