<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_azul"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/scrollView1Registro"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/linearLayout1Registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/linearLayout5Registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip" >
                <TextView
                    android:id="@+id/textView3Registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="@string/registro_usuario"
                    android:textColor="@color/blanco"
                    android:textSize="30dip" >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2Registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/background_blanco_borde_gris"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/LinearLayout01Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip" >

                    <TextView
                        android:id="@+id/TextViewRegistroUsuario"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/usuario"
                        android:textColor="@color/font" />

                    <EditText
                        android:id="@+id/EditTextRegistroUsuario"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:inputType="text"
                        android:textSize="13dip" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout02Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip">

                    <TextView
                        android:id="@+id/TextViewRegistroEmail"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/font" />

                    <EditText
                        android:id="@+id/EditTextRegistroEmail"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                    	android:inputType="textEmailAddress"
                        android:textSize="13dip" >
                      
                    </EditText>
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/linearLayout3Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/textViewRegistroPass"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/pass"
                        android:textColor="@color/font" >
                    </TextView>
                    <EditText
                        android:id="@+id/EditTextRegistroPass"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext"
                        android:inputType="textPassword"
                        android:textSize="13dip" >
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout4Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="5dip" >
                    <TextView
                        android:id="@+id/textViewRegistrOtroDato"
                        android:layout_width="125dip"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textColor="@color/font" >
                    </TextView>
                    <EditText
                        android:id="@+id/EditTextRegistrOtroDato"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edittext_no_editable"
        				android:clickable="false" 
        				android:cursorVisible="false" 
        				android:focusable="false" 
        				android:focusableInTouchMode="false"
                        android:inputType="text"
                        android:textSize="13dip" >
                    </EditText>
                </LinearLayout>
                <Button
                    android:id="@+id/registro"
                    style="@style/styleBotonAzul"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/registro">
                 </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>